# tee_optee_client

./: CMakeLists.txt
libckteec/src/: invoke_ta.c  pkcs11_api.c  pkcs11_token.c
libsel4serialize/: CMakeLists.txt  sel4_serializer.c  sel4_serializer.h
libteec/: CMakeLists.txt
libteec/src/: tee_client_api.c
public/: CMakeLists.txt  teec_trace.h
